# inspect-verifiers-bridge

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
inspect_bridge/: scoring.py
inspect_verifiers_bridge/: __init__.py  dataset.py  loader.py  sandbox.py  scoring.py  tasks.py
tests/: __init__.py  conftest.py  fake_tasks.py  test_dataset_conversion.py  test_integration.py  test_regressions.py  test_task_introspection.py
