[project]
name = "inspect-bridge"
description = "Bridge to convert Inspect AI tasks to Verifiers environments for RL training"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "inspect-ai>=0.3.153",
    "inspect-evals>=0.3.102",
    "verifiers>=0.1.8.post1",
    "datasets>=3.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["inspect_bridge"]

[tool.verifiers.eval]
num_examples = 5
rollouts_per_example = 3

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.basedpyright]
typeCheckingMode = "strict"
pythonVersion = "3.12"
reportMissingTypeStubs = false
reportUnknownMemberType = "warning"
reportUnknownVariableType = "warning"
reportUnknownArgumentType = "warning"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[dependency-groups]
dev = [
    "basedpyright>=1.35.0",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.14.8",
]
