[project]
name = "inspect-verifiers-bridge"
description = "Bridge to convert Inspect AI tasks to Verifiers environments for RL training"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "inspect-ai>=0.3.153",
    "inspect-evals>=0.3.102",
    "verifiers>=0.1.8.post1",
    "datasets>=3.1.0",
]

[dependency-groups]
dev = [
    "basedpyright>=1.35.0",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.14.8",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["inspect_verifiers_bridge"]

[tool.verifiers.eval]
num_examples = 5
rollouts_per_example = 3

[tool.basedpyright]
ignore = ["**/*.ipynb"]
typeCheckingMode = "strict"
useLibraryCodeForTypes = true
pythonVersion = "3.12"
reportMissingTypeStubs = false
reportMissingImports = "error"
reportUnknownMemberType = "warning"
reportUnknownVariableType = "warning"
reportUnknownArgumentType = "warning"
reportAny = false # any is worth the convenience sometimes
reportExplicitAny = false
reportPrivateUsage = false # worth it for testing private functions
allowedUntypedLibraries = [
  "datasets",
  "tqdm",
  "statsmodels",
  "timeout_decorator",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

